Basic Layout, No Display

--- a/index.liquid
+++ b/index.liquid
@@ -1,7 +1,10 @@
 ---
 layout: layout.liquid
-title: 11ty Boilerplate
+title: BooksGetter
 ---
 
 <h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<h2>My Book List</h2>
+<ul id="books">
+  <!-- Books will be loaded here by JavaScript -->
+</ul>
