--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -9,6 +9,7 @@ title: 11ty Boilerplate
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/styles/screen.css">
+  <script src="/js/books.js" type="module"></script>
 </head>
 <body>
   <nav>
@@ -17,6 +18,6 @@ title: 11ty Boilerplate
       <li><a href="/about/" title="About the boilerplate">About</a></li>
     </ul>
   </nav>
-    {{ content }}
+  {{ content }}
 </body>
 </html>
