--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -9,7 +9,6 @@ title: 11ty Boilerplate
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/styles/screen.css">
-  <script src="/js/books.js" type="module"></script>
 </head>
 <body>
   <nav>
@@ -19,5 +18,8 @@ title: 11ty Boilerplate
     </ul>
   </nav>
   {{ content }}
+  
+  <!-- Load the script at the end of the body for better performance -->
+  <script type="module" src="/js/books.js"></script>
 </body>
 </html>
