--- a/index.liquid
+++ b/index.liquid
@@ -5,6 +5,6 @@ title: BooksGetter
 
 <h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
 <h2>My Book List</h2>
-<ul id="books">
-  <!-- Books will be loaded here by JavaScript -->
+<ul id="books" class="content-list">
+  <!-- Books will be loaded here -->
 </ul>
