Proper Display and Cooler CSS

--- a/index.liquid
+++ b/index.liquid
@@ -5,6 +5,7 @@ title: BooksGetter
 
 <h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
 <h2>My Book List</h2>
+<script>getBooks();</script>
 <ul id="books" class="content-list">
   <!-- Books will be loaded here -->
 </ul>
