Final Layout Changes and flair text

--- a/index.liquid
+++ b/index.liquid
@@ -3,8 +3,9 @@ layout: layout.liquid
 title: BooksGetter
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<h2>My Book List</h2>
+<h1>All My Favorite <strong>Books</strong></h1>
+<h2>List of Favorites</h2>
+<h3>In order of most favorite to least favorite</h3>
 <script>getBooks();</script>
 <ul id="books" class="content-list">
   <!-- Books will be loaded here -->
