I lied the flavor text was wrong

--- a/index.liquid
+++ b/index.liquid
@@ -5,7 +5,7 @@ title: BooksGetter
 
 <h1>All My Favorite <strong>Books</strong></h1>
 <h2>List of Favorites</h2>
-<h3>In order of most favorite to least favorite</h3>
+<h3>In NO particular order</h3>
 <script>getBooks();</script>
 <ul id="books" class="content-list">
   <!-- Books will be loaded here -->
